tests/models/struct/named/struct/fail/validate.rs
use dade::model;
#[model]
struct InnerModel;
#[model]
struct TestModel {
    #[field(validate = 2)]
    value: InnerModel,
}
fn main() {}
